# nanochat-varun

./: .gitignore  README.md  pyproject.toml
nanochat_varun/: common.py  data_loader.py  dataset.py  engine.py  gpt.py  muon.py  tokenizer.py
rustbpe/: Cargo.toml
rustbpe/src/: lib.rs
scripts/: test_tokenizer.py  train.py  train_tok.py
