[project]
name = "nanochat_varun"
version = "0.1.0"
description = "my recreation of Andrej Karpathy's ChatGPT clone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "numpy",
    "tiktoken",
    "tqdm",
    "huggingface_hub",
    "wandb"
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"


[tool.maturin]

manifest-path = "rustbpe/Cargo.toml"
python-source = "." 



[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
]